--- a/src/app/components/work-order-panel/work-order-panel.scss
+++ b/src/app/components/work-order-panel/work-order-panel.scss
@@ -217,6 +217,8 @@ $font-family: 'Circular-Std', -apple-system, BlinkMacSystemFont, 'Segoe UI', Rob
 }
 
 .input-group .form-control {
+  flex: 1;
+  width: auto;
   border-right: none;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
